--- a/App/main.html
+++ b/App/main.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
+
 <head>
-	<title>Evacuation Support App</title>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="keywords" content="capp">
-	<meta name="author" content="Matías Micheletto">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport"
+		content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="theme-color" content="#2196f3">
+	<title>My App</title>
+	<link rel="stylesheet" href="assets/css/framework7.bundle.min.css">
 </head>
+
 <body>
-  <h5>Hello World!</h5>
+	<div id="app">
+		<div class="view view-main">
+			<div data-name="home" class="page">
+
+				<!-- Top Navbar -->
+				<div class="navbar">
+					<div class="navbar-bg"></div>
+					<div class="navbar-inner">
+						<div class="title">Evacuation support app</div>
+					</div>
+				</div>
+
+				<div class="panel panel-left panel-cover panel-init">
+					<p>panel content</p>
+				</div>
+
+				<div class="toolbar toolbar-bottom">
+					<div class="toolbar-inner">
+						<!-- Toolbar links -->
+						<a href="#" class="link">Link 1</a>
+						<a href="#" class="link">Link 2</a>
+					</div>
+				</div>
+
+				<div class="page-content"></div>
+
+			</div>
+		</div>
+	</div>
+	<script type="text/javascript" src="assets/js/framework7.bundle.min.js"></script>
+	<script type="text/javascript" src="custom/js/init.js"></script>
 </body>
+
 </html>
