--- a/App/index.html
+++ b/App/index.html
@@ -1,48 +1,49 @@
-
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-	<title>Evacuation Support App</title>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="keywords" content="capp">
-	<meta name="author" content="Matías Micheletto">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!--favicon-->
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style/devices.min.css" type="text/css">
-    <link rel="stylesheet" href="style/style.css" type="text/css">
+  <title>Evacuation Support App</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="keywords" content="capp">
+  <meta name="author" content="Matías Micheletto">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="assets/css/devices.min.css" type="text/css">
+  <link rel="stylesheet" href="assets/css/frame.css" type="text/css">
 </head>
+
 <body>
   <div class="columns">
     <div class="container">
       <div class="marvel-device iphone-x">
         <div class="notch">
-            <div class="camera"></div>
-            <div class="speaker"></div>
+          <div class="camera"></div>
+          <div class="speaker"></div>
         </div>
         <div class="top-bar"></div>
         <div class="sleep"></div>
         <div class="bottom-bar"></div>
         <div class="volume"></div>
         <div class="overflow">
-            <div class="shadow shadow--tr"></div>
-            <div class="shadow shadow--tl"></div>
-            <div class="shadow shadow--br"></div>
-            <div class="shadow shadow--bl"></div>
+          <div class="shadow shadow--tr"></div>
+          <div class="shadow shadow--tl"></div>
+          <div class="shadow shadow--br"></div>
+          <div class="shadow shadow--bl"></div>
         </div>
         <div class="inner-shadow"></div>
         <div class="screen">
-          <div class="top-safe-area"><img src="image/status-bar.svg" alt=""></div>
+          <div class="top-safe-area"><img src="assets/img/status-bar.svg" alt=""></div>
           <iframe src="main.html" style="overflow:hidden"></iframe>
-          <div class="bottom-safe-area"><div class="home-bar"></div></div>
+          <div class="bottom-safe-area">
+            <div class="home-bar"></div>
+          </div>
         </div>
       </div>
     </div>
-    
+
   </div>
-  <script src="assets/jquery.min.js"></script>
-  <script src="assets/app.js"></script>
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/app.js"></script>
 </body>
+
 </html>
