Directorio para hostear

--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 	<meta name="theme-color" content="#2196f3">
 	<title>My App</title>
 	<link rel="stylesheet" href="assets/css/framework7.bundle.min.css">
+	<link rel="stylesheet" href="assets/css/icons.css">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
 				<div class="navbar">
 					<div class="navbar-bg"></div>
 					<div class="navbar-inner">
-						<div class="title">Evacuation support app</div>
+						<div class="title"><i class="material-icons panel-open" style="cursor: pointer;">menu</i>  Evacuation support app</div>
 					</div>
 				</div>
 
