--- a/main.html
+++ b/main.html
@@ -3,13 +3,14 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport"
-		content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="theme-color" content="#2196f3">
-	<title>My App</title>
+	<title>Evacuation Support App</title>
 	<link rel="stylesheet" href="assets/css/framework7.bundle.min.css">
+	<link rel="stylesheet" href="assets/css/leaflet.css">
 	<link rel="stylesheet" href="assets/css/icons.css">
+	<link rel="stylesheet" href="custom/css/style.css">
 </head>
 
 <body>
@@ -22,8 +23,7 @@
 					<div class="navbar-bg"></div>
 					<div class="navbar-inner">
 						<div class="title"><i class="material-icons panel-open" style="cursor: pointer;">menu</i>
-							Evacuation
-							support app</div>
+							Evacuation support app</div>
 					</div>
 				</div>
 
@@ -63,6 +63,7 @@
 		</div>
 	</div>
 	<script type="text/javascript" src="assets/js/framework7.bundle.min.js"></script>
+	<script type="text/javascript" src="assets/js/leaflet.js"></script>
 	<script type="text/javascript" src="custom/js/homeCtrl.js"></script>
 	<script type="text/javascript" src="custom/js/init.js"></script>
 </body>
