--- a/main.html
+++ b/main.html
@@ -51,19 +51,21 @@
 
 				<div class="view-main"></div>
 
+				<!--
 				<div class="toolbar toolbar-bottom">
 					<div class="toolbar-inner">
-						<!-- Toolbar links -->
 						<a class="link back" style="cursor:pointer"><i class="material-icons">arrow_back_ios</i></a>
 						<a href="/" class="link"><i class="material-icons">home</i></a>
 					</div>
 				</div>
+				-->
 
 			</div>
 		</div>
 	</div>
 	<script type="text/javascript" src="assets/js/framework7.bundle.min.js"></script>
 	<script type="text/javascript" src="assets/js/leaflet.js"></script>
+	<!--<script type="text/javascript" src="assets/js/leaflet-offline.min.js"></script>-->
 	<script type="text/javascript" src="custom/js/homeCtrl.js"></script>
 	<script type="text/javascript" src="custom/js/init.js"></script>
 </body>
