Dialogo para reporte de eventos

--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 	<meta name="theme-color" content="#2196f3">
 	<title>Evacuation Support App</title>
 	<link rel="stylesheet" href="assets/css/framework7.bundle.min.css">
+	<link rel="stylesheet" href="assets/css/framework7.min.css">
 	<link rel="stylesheet" href="assets/css/leaflet.css">
 	<link rel="stylesheet" href="assets/css/icons.css">
 	<link rel="stylesheet" href="custom/css/style.css">
