--- a/main.html
+++ b/main.html
@@ -10,11 +10,12 @@
 	<link rel="stylesheet" href="assets/css/framework7.bundle.min.css">
 	<link rel="stylesheet" href="assets/css/framework7.min.css">
 	<link rel="stylesheet" href="assets/css/leaflet.css">
+	<link rel="stylesheet" href="assets/css/leaflet-routing-machine.css" />
 	<link rel="stylesheet" href="assets/css/icons.css">
 	<link rel="stylesheet" href="custom/css/style.css">
 </head>
 
-<body>
+<body onload="app.init()">
 	<div id="app">
 		<div class="view">
 			<div class="page">
@@ -67,8 +68,9 @@
 	<script type="text/javascript" src="assets/js/framework7.bundle.min.js"></script>
 	<script type="text/javascript" src="assets/js/leaflet.js"></script>
 	<!--<script type="text/javascript" src="assets/js/leaflet-offline.min.js"></script>-->
-	<script type="text/javascript" src="custom/js/homeCtrl.js"></script>
-	<script type="text/javascript" src="custom/js/init.js"></script>
+	<script type="text/javascript" src="assets/js/leaflet-routing-machine.js"></script>
+	<script type="text/javascript" src="custom/js/mapCtrl.js"></script>
+	<script type="text/javascript" src="custom/js/app.js"></script>
 </body>
 
 </html>
