Reorganizacion directorio. Actualizacion readme. Script hotspot para Raspberry

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="keywords" content="capp">
   <meta name="author" content="Matías Micheletto">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="assets/css/devices.min.css" type="text/css">
-  <link rel="stylesheet" href="assets/css/frame.css" type="text/css">
+  <link rel="stylesheet" href="app/assets/css/devices.min.css" type="text/css">
+  <link rel="stylesheet" href="app/assets/css/frame.css" type="text/css">
 </head>
 
 <body>
@@ -32,8 +32,8 @@
         </div>
         <div class="inner-shadow"></div>
         <div class="screen">
-          <div class="top-safe-area"><img src="assets/img/status-bar.svg" alt=""></div>
-          <iframe src="main.html" style="overflow:hidden"></iframe>
+          <div class="top-safe-area"><img src="app/assets/img/status-bar.svg" alt=""></div>
+          <iframe src="app/main.html" style="overflow:hidden"></iframe>
           <div class="bottom-safe-area">
             <div class="home-bar"></div>
           </div>
@@ -42,8 +42,8 @@
     </div>
 
   </div>
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/app.js"></script>
+  <script src="app/assets/js/jquery.min.js"></script>
+  <script src="app/assets/js/app.js"></script>
 </body>
 
 </html>
