Interfaz de la app para comunicarse con el server (sin terminar)

--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
 	<script type="text/javascript" src="assets/js/leaflet.js"></script>
 	<!--<script type="text/javascript" src="assets/js/leaflet-offline.min.js"></script>-->
 	<script type="text/javascript" src="assets/js/leaflet-routing-machine.js"></script>
+	<script type="text/javascript" src="assets/js/utils.js"></script>
 	<script type="text/javascript" src="custom/js/mapCtrl.js"></script>
 	<script type="text/javascript" src="custom/js/app.js"></script>
 </body>
