Mejoras en dibujo de marcadores y rutas

--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,18 @@
 								</li>
 							</ul>
 						</div>
+						
+						<div class="list simple-list">
+							<ul>
+							  <li>
+								<span>Automatic location</span>
+								<label class="toggle toggle-init color-black">
+								  <input type="checkbox" id="autoloc_checkbox" onchange="app.toggleAutoLocation()" checked>
+								  <span class="toggle-icon"></span>
+								</label>
+							  </li>
+							</ul>
+						</div>
 
 					</div>
 				</div>
