Intercambio de databases entre app y wu

--- a/app/index.html
+++ b/app/index.html
@@ -24,8 +24,13 @@
 				<div class="navbar">
 					<div class="navbar-bg"></div>
 					<div class="navbar-inner">
-						<div class="title"><i class="material-icons panel-open" style="cursor: pointer;">menu</i>
-							Evacuation support app</div>
+						<div class="title">
+							<i class="material-icons panel-open" style="cursor: pointer;">menu</i>
+							Evacuation support app
+						</div>
+						<div class="right">
+							<i class="material-icons" id="wss_state_icon">signal_wifi_off</i>
+						</div>
 					</div>
 				</div>
 
